[tool.poetry]
name = "rustbox"
version = "0.1.0"
description = "Official Python SDK for Rustbox"
authors = ["Orkait <engineering@orkait.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23.0"
respx = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
