[project]
name = "rustbox"
version = "0.1.0"
description = "Official Python SDK for Rustbox - run untrusted code in a kernel-enforced sandbox."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Orkait", email = "engineering@orkait.com" }]
keywords = ["rustbox", "sandbox", "code-execution", "untrusted-code", "judge", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.27.0,<1.0.0",
]

[project.urls]
Homepage = "https://rustbox.orkait.com"
Documentation = "https://rustbox.orkait.com/docs"
Repository = "https://github.com/orkait/rustbox-sdk"
Issues = "https://github.com/orkait/rustbox-sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rustbox"]
