[package]
name = "rustbox-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Official Rust SDK for Rustbox - run untrusted code in a kernel-enforced sandbox."
license = "MIT"
homepage = "https://rustbox.orkait.com"
repository = "https://github.com/orkait/rustbox-sdk"
documentation = "https://docs.rs/rustbox-sdk"
keywords = ["rustbox", "sandbox", "code-execution", "judge", "agent"]
categories = ["api-bindings", "asynchronous", "development-tools"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[workspace]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
